<resources>
    <string name="app_name">Local_Loop</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">"Sign Up"</string>
    <string name="sign_out">Sign Out</string>
    <string name = "browse_events">Browse Events</string>

    <string name="create_button">Create an account</string>
    <string name="sign_button">Sign in</string>
    <string-array name="person_position">
        <item>Organizer</item>
        <item>Participant</item>
    </string-array>
    <string name="user_role">Role</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="account_creation">Create an Account</string>
    <string name="submit_button">Submit</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Don\'t have an account? Click here to sign up!</string>
    <string name="yes_account">Already have an account? Click here to sign in!</string>

    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="edit_category">Edit Category</string>
    <string name="add_category">Add a Category</string>
    <string name="remove_category">Remove a Category</string>
    <string name="back_button">Return to previous screen</string>

    <string name="add_event">Add an Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="remove_event">Remove an Event</string>
    <string name ="search_events">Search for an Event</string>
    <string name="categoriesManagement">Categories Management</string>
    <string name="userManagement">User Management</string>
    <string name="requestManagement">Request Management</string>
    <string name="eventManagement">Event Management</string>
    <string name="my_events">My Events</string>
    <string name="attendeeList">Attendee List</string>
    <string name="userName">Username: </string>
    <string name="firstName">First Name: </string>
    <string name="lastName">Last Name: </string>
    <string name="emailAddress">Email: </string>
    <string name="type">Type: </string>

    <string name="event">Events</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="fee">Event Fee ($)</string>
    <string name="date_and_time">Event Date and Time</string>
    <string name="select_category">Select a Category</string>
    <string name="extra_info">Extra Info</string>
    <string name="unknown">Unknown</string>
    <string name="hint_delete">Delete user (cannot be undone).</string>
    <string name="hint_disable">User is not disabled.</string>
    <string name="hint_approve">User is not approved.</string>
    <string name="hint_refuse">Refuse user (cannot be undone).</string>

    <!-- Custom Date/Time Picker style -->
    <style name="MyDatePickerDialogTheme" parent="Theme.MaterialComponents.DayNight.Dialog">
        <item name="colorPrimary">@android:color/holo_blue_dark</item>
        <item name="colorPrimaryVariant">@android:color/holo_blue_dark</item>
        <item name="colorAccent">@android:color/holo_blue_dark</item>
    </style>

    <string name="no_requests">No Requests Made Yet!</string>
    <string name="no_attendees">No Attendees Joined Yet!</string>
    <string name="no_users">No Users Created Yet!</string>
    <string name="no_events_created">No Events Created Yet!</string>
    <string name="no_events_found">No Events Found Yet!</string>
    <string name="no_events_joined">No Events Joined Yet!</string>
    <string name="no_categories_created">No Categories Created Yet!</string>

</resources>