<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".Displays.DisplayItemActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Button to add a new category -->

    <!-- Button to remove a new category -->

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/add_category"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_add_box_24" />

    <ImageButton
        android:id="@+id/removeButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/remove_category"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_delete_forever_24" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/edit_category"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toStartOf="@+id/removeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_box_edit_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/back_button"
        android:gravity="center"
        android:text=""
        app:icon="@drawable/undo_icon"
        app:iconGravity="textStart"
        app:iconSize="25dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/noTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="@+id/recyclerView"
        app:layout_constraintTop_toTopOf="@+id/recyclerView" />


</androidx.constraintlayout.widget.ConstraintLayout>