<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".Activity.AuthActivity">

    <LinearLayout
        android:id="@+id/authLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/bree_serif"
            android:gravity="center_horizontal"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <!-- Role Label and Spinner (SignUp only) -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/roleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/user_role"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/roleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:cursorVisible="false"
                android:inputType="none"
                android:textColor="@color/black"
                android:backgroundTint="@android:color/holo_blue_light" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- First and Last Name (SignUp only) -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/first_name"
            android:visibility="visible"
            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            app:helperTextTextColor="@color/design_default_color_error"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameInputEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@android:color/holo_blue_light"
                android:textColor="@color/black"
                android:textColorHighlight="@color/material_dynamic_neutral_variant90"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/last_name"
            android:visibility="visible"
            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            app:helperTextTextColor="@color/design_default_color_error"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameInputEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@android:color/holo_blue_light"
                android:textColor="@color/black"
                android:textColorHighlight="@color/material_dynamic_neutral_variant90"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Username -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            app:helperTextTextColor="@color/design_default_color_error"
            app:hintTextColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:backgroundTint="@android:color/holo_blue_light"
                android:textColor="@color/black"
                android:textColorHighlight="@color/material_dynamic_neutral_variant90"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email (SignUp only) -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email"
            android:visibility="visible"
            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            app:helperTextTextColor="@color/design_default_color_error"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInputEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@android:color/holo_blue_light"
                android:textColor="@color/black"
                android:textColorHighlight="@color/material_dynamic_neutral_variant90"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            app:helperTextTextColor="@color/design_default_color_error"
            app:hintTextColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:selectAllOnFocus="true"
                android:backgroundTint="@android:color/holo_blue_light"
                android:textColor="@color/black"
                android:textColorHighlight="@color/material_dynamic_neutral_variant90"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Shared Action Button (Submit/Login) -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/actionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:enabled="false"
            android:text="@string/sign_button"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />

        <!-- Switch Mode Toggle -->
        <Button
            android:id="@+id/toggleAuthMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/no_account"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/passwordLayout"
            app:layout_constraintStart_toStartOf="@id/passwordLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/back_button"
        android:text=""
        app:icon="@drawable/undo_icon"
        app:iconGravity="textStart"
        app:iconSize="25dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
