<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp"
    android:textSize="20sp">

    <TextView
        android:id="@+id/userManagementTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userManagement"
        android:background="@color/white"
        android:textColor="@android:color/holo_blue_dark"
        android:padding="24dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/userBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/back_button"
        android:gravity="center"
        android:text=""
        android:elevation="8dp"
        app:icon="@drawable/undo_icon"
        app:iconGravity="textStart"
        app:iconSize="25dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/userBackButton"
        app:layout_constraintTop_toBottomOf="@id/userManagementTitle" />

    <TextView
        android:id="@+id/noUsersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_users"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/recycler"
        app:layout_constraintEnd_toEndOf="@+id/recycler"
        app:layout_constraintStart_toStartOf="@+id/recycler"
        app:layout_constraintTop_toBottomOf="@+id/userManagementTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>